# TruckMotionPlanning

./: Dependencies  Dependencies.txt  README  README.md  Semi_Start.sh  Simulation_How_To.txt  TractorTrailer_Kinematics.m  requirements.txt  rs_path.py
Integration/: Astar_Tractor_Trailer.py  README  parallel_parking.py  perpendicular_parking.py  rs_path.py  test.py  trailer_hybrid_a_star.py  trailerlib.py
matlab_code/: ROS_Startup.m  semitruck_drive.m  semitruck_position_callback.m  semitruck_state_callback.m  semitruck_steer.m
python/: Astar_Tractor_Trailer.py  nodeObject.py  perpendicular_parking.py  rs_path.py  trailer_hybrid_a_star.py  trailerlib.py
python/Proposed_Changes/: Astar_Tractor_Trailer.py
rbe550_semi_control/: CMakeLists.txt  package.xml
rbe550_semi_control/config/: rbe550_semi_control.yaml
rbe550_semi_control/launch/: rbe550_semi_control.launch
rbe550_semi_description/: CMakeLists.txt  package.xml
rbe550_semi_description/urdf/: semitruck.urdf
rbe550_semi_description/urdf/meshes/: semi.dae
rbe550_semi_gazebo/: CMakeLists.txt  package.xml
rbe550_semi_gazebo/launch/: rbe550_world.launch
