<?xml version="1.0"?>
<package format="2">
  <name>rbe550_semi_description</name>
  <version>0.0.0</version>
  <description>The rbe550_semi description package</description>

  <maintainer email="nicholas.g.mehalic@gmail.com">Nicholas Mehalic</maintainer>

  <license>BSD</license>

  <author email="nicholas.g.mehalic@gmail.com">Nicholas Mehalic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
