<package>
  <name>rbe550_semi_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Plugins to interface the Semi-Truck with ROS</description>
  <maintainer email="nicholas.g.mehalic@gmail.com">Nicholas Mehalic</maintainer>

  <license>BSD</license>

  <author email="nicholas.g.mehalic@gmail.com">Nicholas Mehalic</author>

  <!-- Commented out to test PhantomX version
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rbe550_semi_control</run_depend>
  <run_depend>rbe550_semi_description</run_depend>

  <export>
  </export>
</package>
